// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Backdrop Closedby Any 1`] = `
<button
  data-variant="secondary"
  type="button"
  aria-haspopup="dialog"
>
  Åpne Dialog
</button>
<dialog
  data-placement="center"
  data-modal="true"
  id="<removed>"
  closedby="any"
  open
>
  <button
    data-icon="true"
    commandfor="_r_5_"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
  >
  </button>
  <h2>
    Dialog med
    <code>
      closedby="any"
    </code>
  </h2>
  <p data-variant="default">
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
  </p>
</dialog>
`;

exports[`Custom Close Button 1`] = `
<button
  commandfor="custom-close-button-dialog"
  data-variant="secondary"
  type="button"
  aria-haspopup="dialog"
  command="show-modal"
>
  Åpne Dialog med tilpasset lukkeknapp
</button>
<dialog
  data-placement="center"
  data-modal="true"
  id="<removed>"
  open
>
  <button
    commandfor="custom-close-button-dialog"
    data-variant="secondary"
    type="button"
    command="close"
  >
    Lukk
  </button>
  <div>
    <h2>
      Dialog med tilpasset lukkeknapp
    </h2>
    <p data-variant="default">
      Her har vi erstattet det vanlige lukkekrysset med en knapp med tekst
    </p>
    <p data-variant="default">
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
    </p>
  </div>
</dialog>
`;

exports[`Dialog Non Modal 1`] = `
<ds-field style="<removed>">
  <label
    data-weight="medium"
    for="<removed>"
  >
    Besvarelse
  </label>
  <textarea
    rows="8"
    id="<removed>"
    style="<removed>"
  >
  </textarea>
</ds-field>
<button
  data-variant="secondary"
  type="button"
>
  Åpne skrivetips
</button>
<dialog
  data-placement="center"
  data-modal="false"
  id="<removed>"
  style="<removed>"
  open
>
  <button
    data-icon="true"
    commandfor="_r_b_"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
  >
  </button>
  <h2 style="<removed>">
    Hva besvarelsen burde inneholde
  </h2>
  <ul>
    <li>
      intro til prosjektet
    </li>
    <li>
      oversikt over hva som er gjort i prosjektet
    </li>
    <li>
      beskrivelse av prosjektmålene
    </li>
    <li>
      metode for å oppnå prosjektmålene
    </li>
    <li>
      leveranse
    </li>
  </ul>
</dialog>
`;

exports[`Dialog With Form 1`] = `
<button
  data-variant="primary"
  type="button"
  aria-haspopup="dialog"
>
  Send inn skjema
</button>
<dialog
  data-placement="center"
  data-modal="true"
  id="<removed>"
  closedby="any"
  open
>
  <button
    data-icon="true"
    commandfor="dialog-with-form"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
  >
  </button>
  <h2 style="<removed>">
    Skjemainnsending
  </h2>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      Navn
    </label>
    <div>
      <input
        autofocus="true"
        type="text"
        value
        id="<removed>"
      >
    </div>
  </ds-field>
  <div style="<removed>">
    <button
      commandfor="dialog-with-form"
      data-variant="primary"
      type="button"
      command="close"
    >
      Send inn skjema
    </button>
    <button
      commandfor="dialog-with-form"
      data-variant="secondary"
      type="button"
      command="close"
    >
      Avbryt
    </button>
  </div>
</dialog>
`;

exports[`Dialog With Max Width 1`] = `
<button
  data-variant="secondary"
  type="button"
  aria-haspopup="dialog"
>
  Åpne Dialog
</button>
<dialog
  data-placement="center"
  data-modal="true"
  id="<removed>"
  style="<removed>"
  open
>
  <button
    data-icon="true"
    commandfor="_r_8_"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
  >
  </button>
  <h2 style="<removed>">
    Dialog som er veldig bred
  </h2>
  <p data-variant="default">
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
  </p>
</dialog>
`;

exports[`Dialog With Open Prop 1`] = `
<button
  data-variant="primary"
  type="button"
  aria-haspopup="dialog"
>
  Åpne Dialog med ekstern tilstand
</button>
<dialog
  data-placement="center"
  data-modal="true"
  id="<removed>"
  open
>
  <button
    data-icon="true"
    commandfor="_r_3_"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
  >
  </button>
  <div>
    <h2>
      Dialog med ekstern tilstand
    </h2>
    <p data-variant="default">
      Her setter vi en ekstern tilstand med
      <code>
        open
      </code>
      og styrer denne for å åpne og lukke dialogen.
    </p>
    <p data-variant="default">
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
    </p>
    <button
      data-variant="secondary"
      type="button"
    >
      Lukk dialog
    </button>
  </div>
</dialog>
`;

exports[`Dialog With Suggestion 1`] = `
<button
  data-variant="secondary"
  type="button"
  aria-haspopup="dialog"
>
  Åpne Dialog
</button>
<dialog
  data-placement="center"
  data-modal="true"
  id="<removed>"
  style="<removed>"
  open
>
  <button
    data-icon="true"
    commandfor="_r_9_"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
  >
  </button>
  <div>
    <h2>
      Dialog med innhold utenfor
    </h2>
  </div>
  <div>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Velg en kommune
      </label>
      <ds-suggestion>
        <input
          placeholder=" "
          type="text"
          id="<removed>"
          popovertarget=":ds:3"
          data-label="Velg en kommune"
          list=":ds:3"
          aria-label="Velg en kommune​​​​​"
          aria-autocomplete="list"
          aria-controls=":ds:3"
          aria-expanded="true"
          autocomplete="off"
          role="combobox"
        >
        <del
          aria-label="Tøm"
          hidden
          role="button"
        >
        </del>
        <u-datalist
          data-nofilter
          data-sr-plural="%d forslag"
          data-sr-singular="%d forslag"
          popover="manual"
          role="listbox"
          id="<removed>"
          hidden
          tabindex="-1"
          aria-multiselectable="false"
        >
          <u-option
            label="Sogndal"
            value="Sogndal"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Sogndal
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Oslo"
            value="Oslo"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Oslo
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Brønnøysund"
            value="Brønnøysund"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Brønnøysund
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Stavanger"
            value="Stavanger"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Stavanger
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Trondheim"
            value="Trondheim"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Trondheim
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Bergen"
            value="Bergen"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Bergen
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Lillestrøm"
            value="Lillestrøm"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Lillestrøm
            <div>
              Kommune
            </div>
          </u-option>
        </u-datalist>
      </ds-suggestion>
    </ds-field>
  </div>
  <div style="<removed>">
    <button
      data-variant="primary"
      type="button"
    >
      Send inn
    </button>
    <button
      data-variant="secondary"
      type="button"
    >
      Avbryt
    </button>
  </div>
</dialog>
`;

exports[`Drawer 1`] = `
<div style="<removed>">
  <ds-field
    data-clickdelegatefor="<removed>"
    style="<removed>"
  >
    <input
      id="<removed>"
      type="checkbox"
      checked
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Modal
    </label>
  </ds-field>
  <fieldset>
    <div style="<removed>">
      <ds-field data-clickdelegatefor="<removed>">
        <input
          id="<removed>"
          type="radio"
          value="center"
          name="drawer"
        >
        <label
          data-weight="regular"
          for="<removed>"
        >
          Midten
        </label>
      </ds-field>
      <ds-field data-clickdelegatefor="<removed>">
        <input
          id="<removed>"
          type="radio"
          value="top"
          name="drawer"
        >
        <label
          data-weight="regular"
          for="<removed>"
        >
          Topp
        </label>
      </ds-field>
      <ds-field data-clickdelegatefor="<removed>">
        <input
          id="<removed>"
          type="radio"
          value="bottom"
          name="drawer"
        >
        <label
          data-weight="regular"
          for="<removed>"
        >
          Bunn
        </label>
      </ds-field>
      <ds-field data-clickdelegatefor="<removed>">
        <input
          id="<removed>"
          type="radio"
          value="left"
          name="drawer"
        >
        <label
          data-weight="regular"
          for="<removed>"
        >
          Venstre
        </label>
      </ds-field>
      <ds-field data-clickdelegatefor="<removed>">
        <input
          id="<removed>"
          type="radio"
          value="right"
          name="drawer"
        >
        <label
          data-weight="regular"
          for="<removed>"
        >
          Høyre
        </label>
      </ds-field>
    </div>
  </fieldset>
  <button
    data-variant="primary"
    type="button"
    aria-haspopup="dialog"
  >
    Open Dialog
  </button>
  <dialog
    data-placement="bottom"
    data-modal="true"
    id="<removed>"
    closedby="any"
    style="<removed>"
    open
  >
    <button
      data-icon="true"
      commandfor="_r_c_"
      data-variant="tertiary"
      type="button"
      aria-label="Lukk dialogvindu"
      data-color="neutral"
      command="close"
    >
    </button>
    <div>
      <p data-variant="default">
        This is a modal Dialog with
        <code>
          placement="bottom"
        </code>
      </p>
    </div>
  </dialog>
</div>
`;

exports[`Preview 1`] = `
<div>
  <button
    data-variant="primary"
    type="button"
    aria-haspopup="dialog"
  >
    Åpne Dialog
  </button>
  <dialog
    data-placement="center"
    data-modal="true"
    id="<removed>"
    closedby="any"
    style="<removed>"
    open
  >
    <button
      data-icon="true"
      commandfor="_r_0_"
      data-variant="tertiary"
      type="button"
      aria-label="Lukk dialogvindu"
      data-color="neutral"
      command="close"
    >
    </button>
    <h2 style="<removed>">
      Dialog header
    </h2>
    <p
      data-variant="default"
      style="<removed>"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
    </p>
    <p
      data-variant="default"
      data-size="sm"
    >
      Dialog footer
    </p>
  </dialog>
</div>
`;

exports[`With Header And Footer 1`] = `
<button
  data-variant="primary"
  type="button"
  aria-haspopup="dialog"
>
  Gå til neste
</button>
<dialog
  data-placement="center"
  data-modal="true"
  id="<removed>"
  open
>
  <button
    data-icon="true"
    commandfor="_r_6_"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
  >
  </button>
  <div>
    <p
      data-variant="default"
      data-size="sm"
    >
      Undertittel
    </p>
    <h2>
      Dette må du vite før du går videre
    </h2>
  </div>
  <div>
    <p
      data-variant="default"
      style="<removed>"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sodales eros justo. Aenean non mi ipsum. Cras viverra elit nec vulputate mattis. Nunc placerat euismod pulvinar. Sed nec fringilla nulla, sit amet ultricies ante. Morbi egestas venenatis massa, eu interdum leo rutrum eu. Nulla varius, mi ac feugiat lacinia, magna eros ullamcorper arcu, vel tincidunt erat leo nec tortor. Sed ut dui arcu. Morbi commodo ipsum hendrerit est imperdiet imperdiet. Etiam sed maximus nisi. Quisque posuere posuere orci, non egestas risus facilisis a. Vivamus non tempus felis, in maximus lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
    </p>
    <p data-variant="default">
      Etiam nec tincidunt est. Integer semper sodales efficitur. Pellentesque pellentesque varius leo id congue. Integer lacinia porttitor massa id euismod. Maecenas porta, magna nec interdum eleifend, risus magna condimentum neque, a gravida nisl risus a elit. Donec accumsan metus et lectus placerat varius. Donec tristique odio arcu. Donec cursus leo a dui auctor pulvinar. Sed in elit urna. Nunc vitae magna sed nibh elementum dignissim et ut massa.
    </p>
  </div>
  <div>
    Footer
  </div>
</dialog>
`;

exports[`Without Dialog Trigger Context 1`] = `
<button
  data-variant="secondary"
  type="button"
  aria-haspopup="dialog"
>
  Åpne Dialog med ref
</button>
<dialog
  data-placement="center"
  data-modal="true"
  id="<removed>"
  open
>
  <button
    data-icon="true"
    commandfor="_r_1_"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
  >
  </button>
  <div>
    <h2>
      Dialog med
      <code>
        ref
      </code>
    </h2>
    <p data-variant="default">
      Her bruker vi
      <code>
        ref
      </code>
      for å åpne og lukke dialogen
    </p>
    <p data-variant="default">
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
    </p>
  </div>
  <button
    data-variant="secondary"
    type="button"
  >
    Lukk dialog
  </button>
</dialog>
`;

exports[`Without Dialog Trigger Context With Command 1`] = `
<button
  commandfor="dialog-with-command"
  data-variant="primary"
  type="button"
  command="show-modal"
  aria-haspopup="dialog"
>
  Åpne Dialog med command
</button>
<dialog
  data-placement="center"
  data-modal="true"
  id="<removed>"
  open
>
  <button
    data-icon="true"
    commandfor="dialog-with-command"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
  >
  </button>
  <div>
    <h2>
      Dialog med
      <code>
        command
      </code>
    </h2>
    <p data-variant="default">
      Her bruker vi
      <code>
        command
      </code>
      og
      <code>
        commandfor
      </code>
      for å åpne og lukke dialogen
    </p>
    <p data-variant="default">
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
    </p>
    <button
      commandfor="dialog-with-command"
      data-variant="secondary"
      type="button"
      command="close"
    >
      Lukk dialog
    </button>
  </div>
</dialog>
`;
